--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&family=Roboto&family=Inter:wght@300;400;700&display=swap");
 
+html {
+  box-sizing: border-box;
+}
+
 * {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+}
+
+li {
+  display: inline;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -10,8 +26,6 @@ header {
   background-color: #fff;
   width: 100%;
   height: 90px;
-
-  /* position: fixed; */
   justify-content: space-between;
   align-items: center;
 }
@@ -102,7 +116,7 @@ header > .logo {
   margin-top: 12px;
 }
 
-.icons {
+.headd-icons {
   margin-top: 15px;
   padding-left: 10px;
   list-style-type: none;
@@ -111,4 +125,363 @@ header > .logo {
   align-content: space-around;
   gap: 15px;
   margin-left: 17px;
+}
+
+/* Work section */
+.wrapper {
+  display: grid;
+  width: 375px;
+  grid-template-columns: 225px;
+  grid-template-rows: no-repeat(4, 596px) 114px;
+  row-gap: 114px;
+  padding-bottom: 0;
+}
+
+.shot {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+  height: 560px;
+  margin-left: 24px;
+  margin-right: 24px;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+}
+
+.shot2 {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+  height: 600px;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 44px;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+}
+
+.snapshot {
+  margin-left: 16px;
+  margin-top: 16px;
+  width: 295px;
+  height: 220px;
+  border-radius: 8px;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 16px;
+  margin-top: 12px;
+  width: 295px;
+  height: 259px;
+}
+
+.block2 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 16px;
+  margin-top: 12px;
+  width: 295px;
+  height: 332px;
+}
+
+.heading1 {
+  width: 295px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-bottom: 1px;
+}
+
+.subframe {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 236px;
+  height: 32px;
+  top: 48px;
+  margin-bottom: 12px;
+}
+
+.sub1 {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #344563;
+  top: 8px;
+}
+
+.circle {
+  width: 8px;
+  height: 8px;
+  left: 67px;
+  top: 12px;
+  background: #c1c7d0;
+  border-radius: 50%;
+}
+
+.sub2 {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7a869a;
+}
+
+.normal {
+  width: 295px;
+  height: 76px;
+  top: 92px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
+  margin-bottom: 12px;
+}
+
+.action {
+  display: flex;
+  width: 295px;
+  height: 72px;
+  top: 216px;
+  margin-top: 16px;
+  margin-bottom: 28px;
+}
+
+/* About Section */
+.skillulist {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 327px;
+  list-style: none;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #253858;
+  padding-left: 0;
+}
+
+.skilllist {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #253858;
+  display: flex;
+  justify-self: start;
+  flex-direction: row;
+  list-style: none;
+  width: 303px;
+  max-width: 303px;
+  min-height: 66.72px;
+  margin: 12px 0;
+  text-align: center;
+  background: #f7f7f9;
+  border-radius: 8px;
+  padding-left: 0;
+}
+
+.top {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 327px;
+  border-top-right-radius: 60px;
+  padding-top: 50px;
+  margin-left: 24px;
+  margin-top: 50px;
+  margin-bottom: 0;
+}
+
+.heading2 {
+  order: -2;
+  height: 101px;
+  width: 327px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  color: #172b4d;
+}
+
+.normaltext {
+  order: -1;
+  height: 144px;
+  width: 327px;
+  margin-top: 12px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+}
+
+.social {
+  order: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 200px;
+  height: 80px;
+}
+
+h3 {
+  order: 1;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: left;
+  color: #7f8cff;
+  text-decoration: none;
+  margin-top: 12px;
+}
+
+.vectorframe {
+  order: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 200px;
+  height: 40px;
+  margin-top: 16px;
+  padding-left: 0;
+}
+
+.button {
+  order: 99;
+  width: 162px;
+  border-radius: 8px;
+  background-color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  height: 48px;
+  margin-top: 10px;
+  border: 1px solid #6070ff;
+  font-style: normal;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  transition: 0.3s;
+}
+
+.getbtn {
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  height: 48px;
+  margin-top: 10px;
+  border: 1px solid #6070ff;
+  font-style: normal;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  transition: 0.3s;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #fff;
+  margin-bottom: 0;
+}
+
+.button:hover {
+  opacity: 0.6;
+}
+
+.button:active {
+  transform: translateY(4px);
+}
+
+.skill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 327px;
+
+  /* height: 590px; */
+  margin-left: 24px;
+}
+
+.listframe {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-top: 5px;
+  width: 327px;
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.listtag {
+  display: flex;
+  flex-direction: row;
+  width: 327px;
+}
+
+.listname {
+  width: 273px;
+  height: 24px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000;
+  margin: 5px;
+}
+
+.icon {
+  display: inline-block;
+  margin-right: 33px;
+  border: none;
+  background-color: #fff;
+}
+
+.listimg {
+  margin-left: 12px;
+  margin-top: 9px;
+}
+
+.listtext {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  color: #253858;
+  margin-left: 16px;
+  margin-top: 21px;
+}
+
+.icons {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-top: 16px;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
+.iconsub {
+  background-color: #ebebff;
+  color: #6070ff;
+  padding: 4px 12px;
+  border-radius: 8px;
+  margin-bottom: 0;
 }
