--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ a {
 }
 
 #contact-me {
-  background: #6070ff url("/images/contact-mebg.png") no-repeat;
+  background: #6070ff url("/images/contactbg2.png") no-repeat;
   background-size: contain;
   border-top-left-radius: 80px;
   display: flex;
