--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,13 @@ nav {
   font-size: 18px;
   padding: 10px;
   animation: rotateZ 5s;
+
   /* animation: grow 1.5s linear infinite; */
 }
 
 /* Logo animation */
 
-@keyframes rotateZ {
+@keyframes rotatez {
   to {
     transform: rotateZ(360deg);
   }
