--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ nav {
   /* animation: grow 1.5s linear infinite; */
 }
 
-/* Logo animation */
+/* Logo animation  rotation*/
 
 @keyframes rotatez {
   0% {
