--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,7 @@ form > button {
   border-radius: 8px;
   transition: all ease-in-out 0.2s;
   border: 1px solid gray;
+  margin: 0 auto;
 }
 
 form > button:hover {
