--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ a {
 }
 
 .navbar {
-  min-height: 70px;
+  min-height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -103,7 +103,9 @@ a {
     background-color: #fff;
     transform: translateY(-8px) rotate(-48deg);
   }
-
+  .nav-bar {
+    height: 70px;
+  }
   .nav-menu {
     position: fixed;
     left: -150%;
@@ -111,6 +113,7 @@ a {
     gap: 0;
     padding-top: 80px;
     flex-direction: column;
+    justify-content: flex-start;
     height: 100vh;
     width: 100%;
     transition: 0.3s;
@@ -118,7 +121,7 @@ a {
   }
 
   .nav-item {
-    margin: 16px 0;
+    margin: 0px 0;
   }
 
   .nav-item a {
