--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,11 @@ a {
     background-color: #fff;
     transform: translateY(-8px) rotate(-48deg);
   }
+
   .nav-bar {
     height: 70px;
   }
+
   .nav-menu {
     position: fixed;
     left: -150%;
@@ -121,7 +123,7 @@ a {
   }
 
   .nav-item {
-    margin: 0px 0;
+    margin: 0 0;
   }
 
   .nav-item a {
