--- a/css/menu.css
+++ b/css/menu.css
@@ -16,5 +16,162 @@
 }
 
 /* Add here */
-
+#popup-demo > a {
+  flex-grow: 1;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1.5px solid #1D34FF;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+#nav-menu > ul > li > a {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff !important;
+  text-decoration: none;
+}
+#pop-up-win {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  background: #80808096;
+  z-index: 5;
+  padding: 30px 20px;
+}
+#pop-up-win > div {
+  background: white;
+  height: 90%;
+  border-radius: 16px;
+  padding: 10px;
+  width: calc(100% - 60px);
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  overflow: hidden;
+}
+#popup-card {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+}
+#popup-card > img {
+  width: 100%;
+}
+#popup-head {
+  display: flex;
+  justify-content: space-between;
+}
+#popup-head > span {
+  font-size: 24px;
+  margin: 3px;
+}
+#popup-head > h2 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 44px;
+  color: #172B4D;
+}
+#pop-up-win > div > ul {
+  list-style-type: unset;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7A869A;
+  justify-content: flex-start;
+}
+#pop-up-win > div > ul > li {
+  margin-left: 30px;
+}
+#pop-up-win > div > ul :nth-child(1) {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px;
+  color: #344563;
+  margin-left: -50px;
+  list-style-type: none;
+}
+/* #popup-explain {
+  overflow: scroll;
+} */
+#popup-explain > p {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
+  padding-right: 23px;
+  margin: 0;
+}
+#popup-explain > div > menu {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070FF;
+  padding: 10px 0 20px 0;
+  /* border-bottom: 1px solid #EBECF0; */
+}
+#popup-explain > div > menu > li {
+  padding: 7px 12px 0;
+  margin: 5px 5px 5px 0;
+  height: 24px;
+  background: #EBEBFF;
+  border-radius: 8px;
+  text-align: center;
+  float: left;
+  list-style-type: none;
+}
+#popup-explain > div {
+  display: flex;
+  flex-direction: column;
+}
+#popup-demo {
+  margin: 20px 0;
+  display: flex;
+  gap: 10px;
+}
+#popup-demo svg {
+  margin-top: 3px;
+}
+#popup-demo > a > span {
+  padding-bottom: 5px;
+}
+@media screen and (min-width: 650px) {
+  #pop-up-win {
+    padding: 20px 80px;
+  }
+  #pop-up-win > div {
+    border-radius: 28px;
+    width: calc(100% - 160px);
+  }
+  #popup-explain {
+    display: flex;
+    margin-top: 30px;
+  }
+  #popup-card {
+    max-width: unset;
+    height: 50vh;
+    overflow: hidden;
+  }
+  #popup-card > img {
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  #popup-explain > p {
+    width: 70%;
+  }
+}
+#nav-menu > div {
+  display: flex;
+  justify-content: end;
+  margin: 30px 30px;
+  font-size: 25px;
+  color: white;
+}
+.hidden {
+  display: none;
+}
 /* Add here */
