fix styling issues

--- a/css/menu.css
+++ b/css/menu.css
@@ -161,12 +161,12 @@
 
 @media screen and (min-width: 650px) {
   #pop-up-win {
-    padding: 20px 80px;
+    padding: 20px 142px;
   }
 
   #pop-up-win > div {
     border-radius: 28px;
-    width: calc(100% - 160px);
+    width: calc(100% - 284px);
   }
 
   #popup-explain {
@@ -178,15 +178,23 @@
     max-width: unset;
     height: 50vh;
     overflow: hidden;
+    border-radius: 20px;
   }
 
   #popup-card > img {
     -o-object-fit: cover;
     object-fit: cover;
+    background-size: cover;
+    height: 100%;
   }
 
   #popup-explain > p {
     width: 70%;
+  }
+
+  #popup-head > span {
+    margin: 8px;
+    cursor: pointer;
   }
 }
 
